<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroller"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:id="@+id/champions_league"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:onClick="onSelectLeague"
                android:tag="http://football.ua/champions_league.html"
                android:text="@string/champions_league">
        </Button>
        <Button
                android:id="@+id/uefa_europe_league"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/champions_league"
                android:tag="http://football.ua/uefa.html"
                android:text="@string/uefa_league">
        </Button>
        <Button
                android:id="@+id/ukraine_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/uefa_europe_league"
                android:tag="http://football.ua/ukraine.html"
                android:text="@string/ukraine_championship">
        </Button>
        <Button
                android:id="@+id/england_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/ukraine_championship"
                android:tag="http://football.ua/england.html"
                android:text="@string/england_championship">
        </Button>
        <Button
                android:id="@+id/argentina_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/england_championship"
                android:tag="http://football.ua/argentina.html"
                android:text="@string/argentina_championship">
        </Button>
        <Button
                android:id="@+id/brazil_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/argentina_championship"
                android:tag="http://football.ua/brazil.html"
                android:text="@string/brazil_championship">
        </Button>
        <Button
                android:id="@+id/germany_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/argentina_championship"
                android:tag="http://football.ua/germany.html"
                android:text="@string/germany_championship">
        </Button>
        <Button
                android:id="@+id/italy_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/germany_championship"
                android:tag="http://football.ua/italy.html"
                android:text="@string/italy_championship">
        </Button>
        <Button
                android:id="@+id/spain_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/italy_championship"
                android:tag="http://football.ua/spain.html"
                android:text="@string/spain_championship">
        </Button>
        <Button
                android:id="@+id/netherlands_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/spain_championship"
                android:tag="http://football.ua/netherlands.html"
                android:text="@string/netherlands_championship">
        </Button>
        <Button
                android:id="@+id/portugal_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/netherlands_championship"
                android:tag="http://football.ua/portugal.html"
                android:text="@string/portugal_championship">
        </Button>
        <Button
                android:id="@+id/russia_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/portugal_championship"
                android:tag="http://football.ua/russia.html"
                android:text="@string/russia_championship">
        </Button>
        <Button
                android:id="@+id/north_america_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/russia_championship"
                android:tag="http://football.ua/northamerica.html"
                android:text="@string/north_america_championship">
        </Button>
        <Button
                android:id="@+id/turkey_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/north_america_championship"
                android:tag="http://football.ua/turkey.html"
                android:text="@string/turkey_championship">
        </Button>
        <Button
                android:id="@+id/france_championship"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onSelectLeague"
                android:layout_below="@+id/turkey_championship"
                android:tag="http://football.ua/france.html"
                android:text="@string/france_championship">
        </Button>

    </RelativeLayout>
</ScrollView>