<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="200px"
                android:orientation="vertical"
                android:paddingBottom="10dip"
                android:paddingLeft="15dip"
                android:paddingTop="10dip"
                android:background="@drawable/list_item">
    <RelativeLayout
            android:id="@+id/left_side"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            >

        <TextView
                android:id="@+id/list_complex_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#9000ff00"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="2.0"
                android:shadowDy="2.0"
                android:shadowRadius="1"
                />

        <RelativeLayout
                android:id="@+id/list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_complex_caption"
                android:layout_marginTop="10px"
                >
            <Button
                    android:id="@+id/web_view"
                    android:layout_width="50px"
                    android:layout_height="50px"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/football"
                    android:focusable="false"
                    android:text="@string/web_view_button">
            </Button>

            <ImageButton
                    android:id="@+id/sop_cast"
                    android:layout_width="50px"
                    android:layout_height="50px"
                    android:layout_toRightOf="@+id/web_view"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:src="@drawable/video"
                    android:text="@string/sopcast_link"
                    android:visibility="visible">
            </ImageButton>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/center_side"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/left_side"
            android:layout_marginTop="10px"
            >
        <TextView
                android:id="@+id/list_complex_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#AAFFFFFF"
                android:shadowColor="#000000"
                android:shadowDx="2.0"
                android:background="#33003333"
                android:shadowDy="2.0"
                android:shadowRadius="1"
                />
        <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_below="@+id/list_complex_title"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/choose_sopcast_link"
                android:visibility="gone"/>
    </RelativeLayout>
</RelativeLayout>